force-app/main/default/objects/Benefits_Investigation__c/Benefits_Investigation__c.object-meta.xml
<CustomObject>
    <label>Benefits Investigation</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>BI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores Benefits Investigation results for Care Program Enrollees</description>
</CustomObject>