force-app/main/default/objects/Benefits_Investigation__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Free-text field for Case Manager annotations</description>
</CustomField>