force-app/main/default/objects/Benefits_Investigation__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <description>Type of benefit coverage</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Medical</fullName><default>false</default><label>Medical</label></value>
            <value><fullName>Pharmacy</fullName><default>false</default><label>Pharmacy</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>