force-app/main/default/objects/Benefits_Investigation__c/fields/BI_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Completed_Date__c</fullName>
    <label>BI Completed Date</label>
    <type>DateTime</type>
    <description>Date and time the BI was completed/submitted</description>
</CustomField>