force-app/main/default/objects/Benefits_Investigation__c/fields/BI_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Initiated_Date__c</fullName>
    <label>BI Initiated Date</label>
    <type>DateTime</type>
    <description>Date and time the BI was initiated</description>
</CustomField>