force-app/main/default/objects/Benefits_Investigation__c/fields/Care_Program_Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Enrollee__c</fullName>
    <label>Care Program Enrollee</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Benefits_Investigations</relationshipName>
    <relationshipLabel>Benefits Investigations</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Care Program Enrollee (Account) record</description>
</CustomField>