force-app/main/default/objects/Benefits_Investigation__c/fields/Coinsurance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_Pct__c</fullName>
    <label>Coinsurance %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Coinsurance percentage</description>
</CustomField>