force-app/main/default/objects/Benefits_Investigation__c/fields/Copay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Copay_Amount__c</fullName>
    <label>Copay Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Copay amount</description>
</CustomField>