force-app/main/default/objects/Benefits_Investigation__c/fields/Coverage_Determination__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Determination__c</fullName>
    <label>Coverage Determination</label>
    <type>Picklist</type>
    <description>Coverage determination result</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Covered</fullName><default>false</default><label>Covered</label></value>
            <value><fullName>Not Covered</fullName><default>false</default><label>Not Covered</label></value>
            <value><fullName>Medical Exception Required</fullName><default>false</default><label>Medical Exception Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>