force-app/main/default/objects/Benefits_Investigation__c/fields/Deductible_Family__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Family__c</fullName>
    <label>Deductible (Family)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Family deductible amount</description>
</CustomField>