force-app/main/default/objects/Benefits_Investigation__c/fields/Deductible_Individual__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Individual__c</fullName>
    <label>Deductible (Individual)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Individual deductible amount</description>
</CustomField>