force-app/main/default/objects/Benefits_Investigation__c/fields/Network_Status__c.field-meta.xml
<CustomField>
    <fullName>Network_Status__c</fullName>
    <label>Network Status</label>
    <type>Picklist</type>
    <description>In-network or out-of-network status</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>In-Network</fullName><default>false</default><label>In-Network</label></value>
            <value><fullName>Out-of-Network</fullName><default>false</default><label>Out-of-Network</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>