force-app/main/default/objects/Benefits_Investigation__c/fields/OOP_Max_Individual__c.field-meta.xml
<CustomField>
    <fullName>OOP_Max_Individual__c</fullName>
    <label>Out-of-Pocket Max (Individual)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Individual out-of-pocket maximum</description>
</CustomField>