force-app/main/default/objects/Benefits_Investigation__c/fields/PA_Phone__c.field-meta.xml
<CustomField>
    <fullName>PA_Phone__c</fullName>
    <label>PA Phone</label>
    <type>Phone</type>
    <description>Prior Authorization contact phone number</description>
</CustomField>