force-app/main/default/objects/Benefits_Investigation__c/fields/PA_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>PA_Portal_URL__c</fullName>
    <label>PA Portal URL</label>
    <type>Url</type>
    <description>Prior Authorization portal URL</description>
</CustomField>