force-app/main/default/objects/Benefits_Investigation__c/fields/Payer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Payer_Phone__c</fullName>
    <label>Payer Phone</label>
    <type>Phone</type>
    <description>Payer contact phone number</description>
</CustomField>