force-app/main/default/objects/Benefits_Investigation__c/fields/Payer_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Rep_Name__c</fullName>
    <label>Payer Rep Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the payer representative contacted</description>
</CustomField>