force-app/main/default/objects/Benefits_Investigation__c/fields/Reference_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_Call_ID__c</fullName>
    <label>Reference / Call ID</label>
    <type>Text</type>
    <length>100</length>
    <description>Reference or call ID from payer contact</description>
</CustomField>