force-app/main/default/objects/Benefits_Investigation__c/fields/SP_Name__c.field-meta.xml
<CustomField>
    <fullName>SP_Name__c</fullName>
    <label>Specialty Pharmacy Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Specialty pharmacy name</description>
</CustomField>