force-app/main/default/objects/Benefits_Investigation__c/fields/Specialty_Pharmacy_Required__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Pharmacy_Required__c</fullName>
    <label>Mandatory Specialty Pharmacy</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether a mandatory specialty pharmacy is required</description>
</CustomField>